<resources>
    <string name="app_name">SoTrack</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="view_logs">View Logs</string>
    <string name="element_text">Tag</string>
    <string name="thumbs_down">Thumbs down</string>
    <string name="thumbs_up">Thumbs up</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="yearly">Yearly</string>
    <string name="weekly">Weekly</string>
    <string name="hourly">Hourly</string>
    <string name="average">Average</string>
    <string name="filter_icon">Filter icon</string>
    <string name="export">Export</string>
    <string name="add_tag">Add tag</string>
    <string name="tag_name">Tag name</string>
    <string name="remove_tag">remove tag</string>
</resources>