<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".average.AverageActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="1dp"
        android:gravity="center|top"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/averageTextView"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/average" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/hourly_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/hourly"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/weekly_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/weekly"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/yearly_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/yearly"
                android:textAlignment="center" />

        </LinearLayout>

        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/fragment_vertical_barchart"
            android:layout_width="419dp"
            android:layout_height="374dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.013"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

        </com.github.mikephil.charting.charts.BarChart>

        <ImageButton
            android:id="@+id/filter_button_average"
            android:layout_width="107dp"
            android:layout_height="48dp"
            android:backgroundTint="#00FFFFFF"
            android:text="Button"
            app:srcCompat="@mipmap/ic_filter_icon_foreground" />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="272dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>